--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
+                            <p class="large-text">3</p>
+                            <p class="small-text">Familarized with <br /> Hardware Language</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">400+</p>
-                            <p class="small-text">Customer <br /> reviews</p>
+                            <p class="large-text">4+</p>
+                            <p class="small-text">ECE <br /> Tools</p>
                         </div>
                     </div>
                 </div>
@@ -479,7 +479,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fas fa-user-graduate"></i>
+                                    <!-- <i class="fas fa-user-graduate"></i> -->
                                     <!-- <span>Mobile Number</span> -->
                                 </div>
                                 <p>
