--- a/index.html
+++ b/index.html
@@ -569,5 +569,6 @@
             loop: true
         })
     </script> 
+    <script src="//code.tidio.co/wmvmps1gnflvgzwhopdyogffjmwtaxxu.js" async></script>
 </body>
 </html>
