--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://docs.google.com/document/d/1KyloZw1o7y7rEVMMb4dg-4FslpxptC3JUCn7Oc0NHDw/edit?usp=sharing" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -171,7 +171,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2016 - 2018</p>
-                    <h5>Pre-College<span> - STEM field, Bangladesh</span></h5>
+                    <h5>Pre-College<span> - STEM, Bangladesh</span></h5>
                     <p>
                          Jhalakati Govt. College
                     </p>
@@ -481,9 +481,9 @@
                                     <!-- <i class="fas fa-user-graduate"></i> -->
                                     <!-- <span>Mobile Number</span> -->
                                 </div>
-                                <p>
-                                    <span>: </span>
-                                </p>
+                                <!-- <p> -->
+                                    <!-- <span></span> -->
+                                <!-- </p> -->
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
