--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         
                     </p>
                     <div class="btn-con">
-                        <a href="https://docs.google.com/document/d/1KyloZw1o7y7rEVMMb4dg-4FslpxptC3JUCn7Oc0NHDw/edit?usp=sharing" class="main-btn">
+                        <a href="https://docs.google.com/document/d/1OjdeS3dR9lQBb3S2cBs540ftdmg2xVDiKChS0tX8xrs/edit" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
